--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,10 @@
   "python.linting.flake8Enabled": false,
   "python.linting.flake8Args": ["--max-line-length=120"],
   "python.linting.pylintEnabled": true,
-  "python.linting.pylintArgs": ["--load-plugins pylint_pydantic", "--rcfile=pylintrc"],
+  "python.linting.pylintArgs": [
+    "--load-plugins pylint_pydantic",
+    "--rcfile=pylintrc"
+  ],
   "python.linting.enabled": true,
   "python.testing.pytestArgs": ["tests/unit", "tests/integration"],
   "python.testing.unittestEnabled": false,
