--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,24 +11,15 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.1.5"
+    rev: "v0.1.14"
     hooks:
       - id: ruff
-        args: ["--fix", "--unsafe-fixes"]
-  - repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-      - id: black
-        args: [--config=./pyproject.toml]
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
-    hooks:
-      - id: blacken-docs
+        args: ["--fix"]
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.0.3"
+    rev: "v4.0.0-alpha.8"
     hooks:
       - id: prettier
-        exclude: "_templates"
+        exclude: "templates|migrations|scripts|docs|dist|.venv|public"
   - repo: https://github.com/ariebovenberg/slotscheck
     rev: v0.17.1
     hooks:
@@ -36,14 +27,20 @@ repos:
         exclude: "test_*|docs|migrations|scripts"
         entry: env PYTHONPATH=src slotscheck
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.6.1"
+    rev: "v1.8.0"
     hooks:
       - id: mypy
+        exclude: "scripts/"
         additional_dependencies:
           [
-            advanced-alchemy<1.0.0,
-            "litestar[standard]",
-            litestar-users,
+            "passlib[argon2]",
+            asyncpg,
+            asyncpg-stubs,
+            "litestar[cli,jinja,jwt,redis,sqlalchemy,standard,structlog] @ git+https://github.com/litestar-org/litestar.git@develop",
+            litestar-vite,
+            litestar-saq,
+            types-freezegun,
+            types-python-jose,
             types-click,
             types-redis,
             types-passlib,
