--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-authors = [{name = "Cody Fincher", email = "cody.fincher@gmail.com"}]
+authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Environment :: Web Environment",
@@ -14,14 +14,18 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-    "litestar[standard,sqlalchemy]",
-    "aiosqlite",
-    "litestar-users>=1.0.0rc3",
-    "litestar-vite @ git+https://github.com/cofin/litestar-vite.git@vite-install",
+  "litestar[cli,jinja,jwt,redis,sqlalchemy,standard,structlog] @ git+https://github.com/litestar-org/litestar.git@develop",
+  "asyncpg>=0.28.0",
+  "python-dotenv>=1.0.0",
+  "passlib[argon2]>=1.7.4",
+  "litestar-vite[nodeenv]>=0.1.4",
+  "litestar-granian>=0.1.4",
+  "aiosqlite>=0.19.0",
+
 ]
 description = "Opinionated template for a Litestar application."
-keywords = ["litestar", "realworld"]
-license = {text = "MIT"}
+keywords = ["litestar", "realworld", "conduit"]
+license = { text = "MIT" }
 name = "realworld"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -34,7 +38,7 @@ Issue = "https://github.com/litestar-org/litestar-realworld/issues/"
 Source = "https://github.com/litestar-org/litestar-realworld"
 
 [project.scripts]
-realworld = "realworld.__main__:run_cli"
+conduit = "conduit.__main__:run_cli"
 
 [build-system]
 build-backend = "hatchling.build"
@@ -45,25 +49,21 @@ allow-direct-references = true
 
 [tool.hatch.build]
 dev-mode-dirs = ["src/"]
-include = ["src/realworld/domain/web/public/**/*", "src/realworld/lib/db/**/*.ini"]
-packages = ["src/realworld"]
+include = ["src/conduit/domain/web/public/**/*", "src/conduit/db/**/*.ini"]
+packages = ["src/conduit"]
 
 [tool.pdm.scripts]
 lint = "pdm run pre-commit run --all-files"
+post_install = "pdm run python scripts/pre-build.py --install-packages"
+pre_build = "pdm run python scripts/pre-build.py --build-assets"
+start-infra = "docker-compose -f docker-compose.infra.yml up --force-recreate -d"
+stop-infra = "docker-compose -f docker-compose.infra.yml down --remove-orphans"
 test = "pdm run pytest tests"
-test_coverage = {composite = ["pdm run pytest tests", "pdm run coverage html", "pdm run coverage xml"]}
+test_coverage = { composite = ["pdm run pytest tests", "pdm run coverage html", "pdm run coverage xml"] }
 
 [tool.pdm.dev-dependencies]
-dev = ["nodeenv", "anyio>=4.0.0"]
-linting = [
-  "pre-commit>=3.4.0",
-  "black>=23.7.0",
-  "mypy>=1.5.1",
-  "ruff>=0.0.287",
-  "slotscheck",
-  "types-click",
-  "types-pyyaml",
-]
+dev = ["nodeenv", "anyio"]
+linting = ["pre-commit>=3.4.0", "mypy>=1.5.1", "ruff>=0.0.287", "slotscheck", "types-click", "types-pyyaml"]
 test = ["pytest>=7.4.1", "pytest-xdist>=3.3.1", "pytest-mock>=3.11.1", "pytest-cov", "coverage", "pytest-dotenv"]
 
 [tool.black]
@@ -133,37 +133,37 @@ exclude = [
   "node_modules",
   "venv",
   '__pycache__',
-  "src/realworld/lib/db/migrations/versions/*.py",
+  "src/conduit/db/migrations/versions/*.py",
 ]
 fix = true
 ignore = [
-  "E501", # pycodestyle line too long, handled by black
-  "D100", # pydocstyle - missing docstring in public module
-  "D101", # pydocstyle - missing docstring in public class
-  "D102", # pydocstyle - missing docstring in public method
-  "D103", # pydocstyle - missing docstring in public function
-  "D104", # pydocstyle - missing docstring in public package
-  "D105", # pydocstyle - missing docstring in magic method
-  "D106", # pydocstyle - missing docstring in public nested class
-  "D107", # pydocstyle - missing docstring in __init__
-  "D202", # pydocstyle - no blank lines allowed after function docstring
-  "D205", # pydocstyle - 1 blank line required between summary line and description
-  "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
-  "UP037", # pyupgrade - removes quotes from type annotation
-  "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
-  "B010", # flake8-bugbear - do not call setattr with a constant attribute value
-  "B008", #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
-  "RUF012", # ruff - mutable class attributes should be annotated with `typing.ClassVar`
-  "ANN401", # ruff - Dynamically typed expressions (typing.Any) are disallowed
+  "E501",    # pycodestyle line too long, handled by black
+  "D100",    # pydocstyle - missing docstring in public module
+  "D101",    # pydocstyle - missing docstring in public class
+  "D102",    # pydocstyle - missing docstring in public method
+  "D103",    # pydocstyle - missing docstring in public function
+  "D104",    # pydocstyle - missing docstring in public package
+  "D105",    # pydocstyle - missing docstring in magic method
+  "D106",    # pydocstyle - missing docstring in public nested class
+  "D107",    # pydocstyle - missing docstring in __init__
+  "D202",    # pydocstyle - no blank lines allowed after function docstring
+  "D205",    # pydocstyle - 1 blank line required between summary line and description
+  "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
+  "UP037",   # pyupgrade - removes quotes from type annotation
+  "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
+  "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
+  "B008",    #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
+  "RUF012",  # ruff - mutable class attributes should be annotated with `typing.ClassVar`
+  "ANN401",  # ruff - Dynamically typed expressions (typing.Any) are disallowed
   "ANN102",
-  "ANN101", # ruff - Missing type annotation for `self` in method
+  "ANN101",  # ruff - Missing type annotation for `self` in method
   "PLR0913", # ruff - Too many arguments to function call
   "PLR2004", # Magic value used in comparison
-  "FBT001", # Boolean typed positional argument in function definition
-  "FBT002", # Boolean default positional argument in function definition
-  "FBT003", # Boolean Boolean default positional argument in function definition
-  "ARG002", # Unused method argument
-  "ARG001", #  Unused function argument
+  "FBT001",  # Boolean typed positional argument in function definition
+  "FBT002",  # Boolean default positional argument in function definition
+  "FBT003",  # Boolean Boolean default positional argument in function definition
+  "ARG002",  # Unused method argument
+  "ARG001",  #  Unused function argument
   "TD002",
   "TD003",
   "FIX002",
@@ -174,7 +174,7 @@ ignore = [
   'PT004',
   'PT005',
   'S603',
-  "E501", # pycodestyle line too long, handled by black
+  "E501",    # pycodestyle line too long, handled by black
   "PLW2901", # pylint - for loop variable overwritten by assignment target
   "ANN401",
   "ANN102",
@@ -211,13 +211,13 @@ classmethod-decorators = [
 ]
 
 [tool.ruff.isort]
-known-first-party = ['tests', 'realworld']
+known-first-party = ['tests', 'realworld', 'conduit']
 
 [tool.ruff.per-file-ignores]
 "*/migrations/*.py" = ['D104', 'D103', 'D205', 'D212']
 "__init__.py" = ['F401', 'D104']
 "scripts/*.py" = ["INP001"]
-"src/realworld/lib/db/migrations/versions/*.py" = ["ANN201", "INP001"]
+"src/conduit/lib/db/migrations/versions/*.py" = ["ANN201", "INP001"]
 "tests/*.py" = ['D103', 'S101', 'D104']
 
 [tool.slotscheck]
@@ -256,16 +256,11 @@ module = ["tests.*"]
 
 [[tool.mypy.overrides]]
 ignore_missing_imports = true
-module = [
-  "sqlalchemy.*",
-  "uvicorn.*",
-  "uvloop",
-  "uvloop.*",
-]
+module = ["sqlalchemy.*", "uvicorn.*", "uvloop", "uvloop.*"]
 
 [[tool.mypy.overrides]]
 ignore_errors = true
-module = ["realworld.lib.db.migrations.*", "realworld.lib.dto.*"]
+module = ["conduit.db.migrations.*", "conduit.lib.dto.*"]
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
@@ -274,4 +269,4 @@ warn_required_dynamic_aliases = true
 warn_untyped_fields = true
 
 [tool.pyright]
-include = ["src/realworld", "tests"]
+include = ["src/conduit", "tests"]
