--- a/src/conduit/db/migrations/alembic.ini
+++ b/src/conduit/db/migrations/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 prepend_sys_path = src:.
 # path to migration scripts
-script_location = migrations
+script_location = src/app/lib/db/migrations
 
 # template used to generate migration files
 file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s_%%(rev)s
@@ -64,7 +64,7 @@ output_encoding = utf-8
 # hooks = black
 # black.type = console_scripts
 # black.entrypoint = black
-# black.options = -l 79 REVISION_SCRIPT_FILENAME
+# black.options = -l 120 REVISION_SCRIPT_FILENAME
 
 # lint with attempts to fix using "ruff" - use the exec runner, execute a binary
 # hooks = ruff
