--- a/src/conduit/db/migrations/alembic.ini
+++ b/src/conduit/db/migrations/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 prepend_sys_path = src:.
 # path to migration scripts
-script_location = src/app/lib/db/migrations
+script_location = src/conduit/db/migrations
 
 # template used to generate migration files
 file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s_%%(rev)s
@@ -67,7 +67,7 @@ output_encoding = utf-8
 # black.options = -l 120 REVISION_SCRIPT_FILENAME
 
 # lint with attempts to fix using "ruff" - use the exec runner, execute a binary
-# hooks = ruff
-# ruff.type = exec
-# ruff.executable = %(here)s/.venv/bin/ruff
-# ruff.options = --fix REVISION_SCRIPT_FILENAME
+hooks = ruff
+ruff.type = exec
+ruff.executable = ruff
+ruff.options = --fix REVISION_SCRIPT_FILENAME
