--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,73 +1,109 @@
 {
   "files.exclude": {
-    "**/._*": true,
-    "**/*.pyc": {
-      "when": "$(basename).py"
-    },
-    ".mypy_cache": true,
-    "**/__pycache__": true,
-    ".venv": false,
-    ".idea": true,
-    ".run": true,
-    ".pytest_cache": true,
-    ".hypothesis": true,
-    ".nova": true,
-    ".cache": true,
-    ".dist": true,
-    "**/.pytest_cache": true,
-    "site": true,
-    ".angular": true,
-    ".ruff_cache": true,
-    ".coverage": true,
-    "node_modules": false
+      "**/._*": true,
+      "**/*.pyc": {
+          "when": "$(basename).py"
+      },
+      ".coverage.*": true,
+      ".mypy_cache": true,
+      "**/__pycache__": true,
+      ".venv": true,
+      ".direnv": true,
+      ".idea": true,
+      ".run": true,
+      ".pytest_cache": true,
+      ".cache": true,
+      ".dist": true,
+      "**/.pytest_cache": true,
+      "site": true,
+      ".angular": true,
+      ".ruff_cache": true,
+      ".astro": true,
+      ".unasyncd_cache": true,
+      ".coverage": true,
+      "node_modules": true,
+      ".terraform": true
   },
-  "ruff.format.args": ["--config=${workspaceFolder}/pyproject.toml"],
+  "ruff.format.args": [
+      "--config=${workspaceFolder}/pyproject.toml"
+  ],
   "ruff.lint.run": "onType",
-  "ruff.lint.args": ["--config=${workspaceFolder}/pyproject.toml"],
+  "ruff.lint.args": [
+      "--config=${workspaceFolder}/pyproject.toml"
+  ],
   "mypy-type-checker.importStrategy": "fromEnvironment",
   "black-formatter.importStrategy": "fromEnvironment",
   "pylint.importStrategy": "fromEnvironment",
-  "pylint.args": ["--rcfile=pylintrc"],
-  "python.autoComplete.extraPaths": ["${workspaceFolder}/src"],
+  "python.autoComplete.extraPaths": [
+      "${workspaceFolder}/src"
+  ],
   "python.terminal.activateEnvInCurrentTerminal": true,
   "python.terminal.executeInFileDir": true,
   "python.testing.pytestEnabled": true,
   "autoDocstring.guessTypes": false,
   "python.analysis.autoImportCompletions": true,
   "python.analysis.autoFormatStrings": true,
-  "python.analysis.extraPaths": ["${workspaceFolder}/src"],
+  "python.analysis.extraPaths": [
+      "${workspaceFolder}/src"
+  ],
   "editor.formatOnSave": true,
   "notebook.formatOnSave.enabled": true,
-  "black-formatter.args": ["--line-length=120"],
+  "black-formatter.args": [
+      "--line-length=120"
+  ],
   "evenBetterToml.formatter.reorderKeys": true,
   "evenBetterToml.formatter.trailingNewline": true,
   "evenBetterToml.formatter.columnWidth": 120,
   "evenBetterToml.formatter.arrayAutoCollapse": true,
   "python.globalModuleInstallation": false,
   "python.testing.unittestEnabled": false,
-  "python.testing.autoTestDiscoverOnSaveEnabled": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.ruff": "explicit",
-    "source.organizeImports.ruff": "explicit"
+      "source.fixAll.ruff": "explicit",
+      "source.organizeImports.ruff": "explicit"
   },
   "[python]": {
-    "editor.formatOnSave": true,
-    "editor.formatOnSaveMode": "file",
-    "editor.insertSpaces": true,
-    "editor.tabSize": 4,
-    "editor.trimAutoWhitespace": true,
-    "editor.defaultFormatter": "charliermarsh.ruff",
-    "editor.codeActionsOnSave": {
-      "source.fixAll": "explicit",
-      "source.organizeImports": "explicit"
-    }
+      "editor.formatOnSave": true,
+      "editor.formatOnSaveMode": "file",
+      "editor.insertSpaces": true,
+      "editor.tabSize": 4,
+      "editor.trimAutoWhitespace": true,
+      "editor.defaultFormatter": "charliermarsh.ruff",
+      "editor.codeActionsOnSave": {
+          "source.fixAll": "explicit",
+          "source.organizeImports": "explicit"
+      }
   },
   "python.analysis.fixAll": [
-    "source.unusedImports",
-    "source.convertImportFormat"
+      "source.unusedImports",
+      "source.convertImportFormat"
   ],
   "sqltools.disableReleaseNotifications": true,
   "sqltools.disableNodeDetectNotifications": true,
-  "python.testing.unittestArgs": ["-v", "-s", "./tests", "-p", "test_*.py"],
-  "python.testing.pytestArgs": ["tests"]
+  "cloudcode.duetAI.enable": true,
+  "cloudcode.compute.sshInternalIp": true,
+  "python.testing.pytestArgs": [
+      "tests"
+  ],
+  "markdownlint.run": "onSave",
+  "markdownlint.config": {
+      "default": true,
+      "MD046": {
+          "style": "fenced"
+      },
+      "MD007": {
+          "indent": 4
+      },
+      "no-hard-tabs": false
+  },
+  "yaml.schemas": {
+      "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
+  },
+  "yaml.customTags": [
+      "!ENV scalar",
+      "!ENV sequence",
+      "!relative scalar",
+      "tag:yaml.org,2002:python/name:material.extensions.emoji.to_svg",
+      "tag:yaml.org,2002:python/name:material.extensions.emoji.twemoji",
+      "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format"
+  ]
 }
