--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -13,21 +13,21 @@
 # - pytest-vcr
 # - pytest-sugar
 # - pytest-click
-# - harlequin
-# - cython
-# - anyio
-# - mypy
-# - ruff
-# - pylint
-# - pre-commit
-# - sourcery
-# - types-click
-# - types-six
-# - types-decorator
-# - types-pyyaml
-# - asyncpg-stubs
-# - jupyterlab
-# - ipython
+# - mkdocs>=1.5
+# - mkdocs-material>=9.4
+# - mkdocs-include-markdown-plugin
+# - mkdocs-gen-files
+# - mkdocs-literate-nav
+# - mkdocs-minify-plugin>=0.5
+# - mkdocs-section-index
+# - mkdocs-git-revision-date-localized-plugin>=1.1
+# - mkdocstrings[python]
+# - mkdocs-redirects>=1.2
+# - mkdocs-glightbox>=0.3.0
+# - mike>=2.0.0
+# - pymdown-extensions>=10.5
+# - pygments>=2.13
+# - linkchecker>=10.3
 # - advanced-alchemy[uuid]
 # - aiosqlite>=0.19.0
 # - asyncpg>=0.28.0
@@ -47,37 +47,23 @@ alembic==1.13.1
 anyio==4.3.0
     # via
     #   httpx
-    #   jupyter-server
     #   litestar
     #   watchfiles
 argon2-cffi==23.1.0
     # via
-    #   jupyter-server
     #   litestar-users
     #   passlib
 argon2-cffi-bindings==21.2.0
     # via argon2-cffi
-arrow==1.3.0
-    # via isoduration
-astroid==3.1.0
-    # via pylint
-asttokens==2.4.1
-    # via stack-data
-async-lru==2.0.4
-    # via jupyterlab
 asyncpg==0.29.0
-    # via asyncpg-stubs
-asyncpg-stubs==0.29.1
-attrs==23.2.0
-    # via
-    #   jsonschema
-    #   referencing
 babel==2.14.0
-    # via jupyterlab-server
+    # via
+    #   mkdocs-git-revision-date-localized-plugin
+    #   mkdocs-material
 beautifulsoup4==4.12.3
-    # via nbconvert
-bleach==6.1.0
-    # via nbconvert
+    # via linkchecker
+bracex==2.4
+    # via wcmatch
 certifi==2024.2.2
     # via
     #   httpcore
@@ -87,148 +73,88 @@ cffi==1.16.0
     # via
     #   argon2-cffi-bindings
     #   cryptography
-cfgv==3.4.0
-    # via pre-commit
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via
-    #   harlequin
     #   litestar
+    #   mkdocs
+    #   mkdocstrings
     #   pytest-click
     #   rich-click
-    #   shandy-sqlfmt
     #   typer
     #   uvicorn
-comm==0.2.2
-    # via ipykernel
+colorama==0.4.6
+    # via
+    #   griffe
+    #   mkdocs-material
 coverage==7.4.4
     # via pytest-cov
 cryptography==42.0.5
     # via
     #   litestar
     #   litestar-users
+csscompressor==0.9.5
+    # via mkdocs-minify-plugin
 cython==3.0.9
-debugpy==1.8.1
-    # via ipykernel
-decorator==5.1.1
-    # via ipython
-defusedxml==0.7.1
-    # via nbconvert
-dill==0.3.8
-    # via pylint
-distlib==0.3.8
-    # via virtualenv
-duckdb==0.10.1
-    # via harlequin
+dnspython==2.6.1
+    # via linkchecker
 ecdsa==0.18.0
     # via python-jose
 editorconfig==0.12.4
     # via jsbeautifier
-executing==2.0.1
-    # via stack-data
 faker==24.3.0
     # via polyfactory
-fastjsonschema==2.19.1
-    # via nbformat
-filelock==3.13.1
-    # via virtualenv
-fqdn==1.5.1
-    # via jsonschema
+ghp-import==2.1.0
+    # via mkdocs
+gitdb==4.0.11
+    # via gitpython
+gitpython==3.1.42
+    # via mkdocs-git-revision-date-localized-plugin
 granian==1.2.0
     # via litestar-granian
 greenlet==3.0.3
     # via sqlalchemy
+griffe==0.42.1
+    # via mkdocstrings-python
 h11==0.14.0
     # via
     #   httpcore
     #   uvicorn
-harlequin==1.16.0
 hiredis==2.3.2
     # via redis
+htmlmin2==0.1.13
+    # via mkdocs-minify-plugin
 httpcore==1.0.4
     # via httpx
 httptools==0.6.1
     # via uvicorn
 httpx==0.27.0
-    # via
-    #   jupyterlab
-    #   litestar
-identify==2.5.35
-    # via pre-commit
+    # via litestar
 idna==3.6
     # via
     #   anyio
     #   httpx
-    #   jsonschema
     #   requests
     #   yarl
+importlib-metadata==7.1.0
+    # via mike
+importlib-resources==6.4.0
+    # via mike
 iniconfig==2.0.0
     # via pytest
-ipykernel==6.29.3
-    # via jupyterlab
-ipython==8.18.0
-    # via ipykernel
-isoduration==20.11.0
-    # via jsonschema
-isort==5.13.2
-    # via pylint
-jedi==0.19.1
-    # via ipython
 jinja2==3.1.3
     # via
-    #   jupyter-server
-    #   jupyterlab
-    #   jupyterlab-server
     #   litestar
-    #   nbconvert
-    #   shandy-sqlfmt
+    #   mike
+    #   mkdocs
+    #   mkdocs-material
+    #   mkdocstrings
 jsbeautifier==1.15.1
     # via litestar
-json5==0.9.24
-    # via jupyterlab-server
-jsonpointer==2.4
-    # via jsonschema
-jsonschema==4.21.1
-    # via
-    #   jupyter-events
-    #   jupyterlab-server
-    #   nbformat
-jsonschema-specifications==2023.12.1
-    # via jsonschema
-jupyter-client==8.6.1
-    # via
-    #   ipykernel
-    #   jupyter-server
-    #   nbclient
-jupyter-core==5.7.2
-    # via
-    #   ipykernel
-    #   jupyter-client
-    #   jupyter-server
-    #   jupyterlab
-    #   nbclient
-    #   nbconvert
-    #   nbformat
-jupyter-events==0.10.0
-    # via jupyter-server
-jupyter-lsp==2.2.4
-    # via jupyterlab
-jupyter-server==2.13.0
-    # via
-    #   jupyter-lsp
-    #   jupyterlab
-    #   jupyterlab-server
-    #   notebook-shim
-jupyter-server-terminals==0.5.3
-    # via jupyter-server
-jupyterlab==4.1.5
-jupyterlab-pygments==0.3.0
-    # via nbconvert
-jupyterlab-server==2.25.4
-    # via jupyterlab
-linkify-it-py==2.0.3
-    # via markdown-it-py
+jsmin==3.0.1
+    # via mkdocs-minify-plugin
+linkchecker==10.4.0
 litestar==2.7.0
     # via
     #   litestar-granian
@@ -239,111 +165,92 @@ litestar-users==1.2.2
 litestar-vite==0.1.21
 mako==1.3.2
     # via alembic
-markdown-it-py==3.0.0
+markdown==3.6
     # via
-    #   mdit-py-plugins
-    #   rich
-    #   textual
+    #   mkdocs
+    #   mkdocs-autorefs
+    #   mkdocs-material
+    #   mkdocstrings
+    #   pymdown-extensions
+markdown-it-py==3.0.0
+    # via rich
 markupsafe==2.1.5
     # via
     #   jinja2
     #   mako
-    #   nbconvert
-matplotlib-inline==0.1.6
-    # via
-    #   ipykernel
-    #   ipython
-mccabe==0.7.0
-    # via pylint
-mdit-py-plugins==0.4.0
-    # via markdown-it-py
+    #   mkdocs
+    #   mkdocs-autorefs
+    #   mkdocstrings
 mdurl==0.1.2
     # via markdown-it-py
+mergedeep==1.3.4
+    # via mkdocs
+mike==2.0.0
 mirakuru==2.5.2
     # via pytest-postgresql
-mistune==3.0.2
-    # via nbconvert
+mkdocs==1.5.3
+    # via
+    #   mike
+    #   mkdocs-autorefs
+    #   mkdocs-gen-files
+    #   mkdocs-git-revision-date-localized-plugin
+    #   mkdocs-include-markdown-plugin
+    #   mkdocs-literate-nav
+    #   mkdocs-material
+    #   mkdocs-minify-plugin
+    #   mkdocs-redirects
+    #   mkdocs-section-index
+    #   mkdocstrings
+mkdocs-autorefs==1.0.1
+    # via mkdocstrings
+mkdocs-gen-files==0.5.0
+mkdocs-git-revision-date-localized-plugin==1.2.4
+mkdocs-glightbox==0.3.7
+mkdocs-include-markdown-plugin==6.0.4
+mkdocs-literate-nav==0.6.1
+mkdocs-material==9.5.14
+mkdocs-material-extensions==1.3.1
+    # via mkdocs-material
+mkdocs-minify-plugin==0.8.0
+mkdocs-redirects==1.2.1
+mkdocs-section-index==0.3.8
+mkdocstrings==0.24.1
+    # via mkdocstrings-python
+mkdocstrings-python==1.8.0
+    # via mkdocstrings
 msgspec==0.18.6
     # via litestar
 multidict==6.0.5
     # via
     #   litestar
     #   yarl
-mypy==1.9.0
-mypy-extensions==1.0.0
-    # via mypy
-nbclient==0.10.0
-    # via nbconvert
-nbconvert==7.16.2
-    # via jupyter-server
-nbformat==5.10.3
-    # via
-    #   jupyter-server
-    #   nbclient
-    #   nbconvert
-nest-asyncio==1.6.0
-    # via ipykernel
 nodeenv==1.8.0
-    # via
-    #   litestar-vite
-    #   pre-commit
-notebook-shim==0.2.4
-    # via jupyterlab
-numpy==1.26.4
-    # via pyarrow
-overrides==7.7.0
-    # via jupyter-server
+    # via litestar-vite
 packaging==24.0
     # via
-    #   ipykernel
-    #   jupyter-server
-    #   jupyterlab
-    #   jupyterlab-server
-    #   nbconvert
+    #   mkdocs
     #   pytest
     #   pytest-sugar
-pandocfilters==1.5.1
-    # via nbconvert
-parso==0.8.3
-    # via jedi
+paginate==0.5.6
+    # via mkdocs-material
 passlib==1.7.4
     # via litestar-users
-pexpect==4.9.0
-    # via ipython
+pathspec==0.12.1
+    # via mkdocs
 platformdirs==4.2.0
     # via
-    #   harlequin
-    #   jupyter-core
-    #   pylint
-    #   shandy-sqlfmt
-    #   virtualenv
+    #   mkdocs
+    #   mkdocstrings
 pluggy==1.4.0
     # via pytest
 polyfactory==2.15.0
     # via litestar
 port-for==0.7.2
     # via pytest-postgresql
-pre-commit==3.6.2
-prometheus-client==0.20.0
-    # via jupyter-server
-prompt-toolkit==3.0.36
-    # via
-    #   ipython
-    #   questionary
 psutil==5.9.8
-    # via
-    #   ipykernel
-    #   mirakuru
+    # via mirakuru
 psycopg==3.1.18
     # via pytest-postgresql
-ptyprocess==0.7.0
-    # via
-    #   pexpect
-    #   terminado
-pure-eval==0.2.2
-    # via stack-data
-pyarrow==15.0.2
-    # via textual-fastdatatable
 pyasn1==0.5.1
     # via
     #   python-jose
@@ -352,12 +259,14 @@ pycparser==2.21
     # via cffi
 pygments==2.17.2
     # via
-    #   ipython
-    #   nbconvert
+    #   mkdocs-material
     #   rich
-pylint==3.1.0
-pyperclip==1.8.2
-    # via textual-textarea
+pymdown-extensions==10.7.1
+    # via
+    #   mkdocs-material
+    #   mkdocstrings
+pyparsing==3.1.2
+    # via mike
 pytest==8.1.1
     # via
     #   pytest-click
@@ -374,175 +283,82 @@ pytest-sugar==1.0.0
 pytest-vcr==1.0.2
 python-dateutil==2.9.0.post0
     # via
-    #   arrow
     #   faker
-    #   jupyter-client
+    #   ghp-import
 python-dotenv==1.0.1
     # via uvicorn
 python-jose==3.3.0
     # via
     #   litestar
     #   litestar-users
-python-json-logger==2.0.7
-    # via jupyter-events
+pytz==2024.1
+    # via mkdocs-git-revision-date-localized-plugin
 pyyaml==6.0.1
     # via
-    #   jupyter-events
     #   litestar
     #   litestar-users
-    #   pre-commit
+    #   mike
+    #   mkdocs
+    #   pymdown-extensions
+    #   pyyaml-env-tag
     #   uvicorn
     #   vcrpy
-pyzmq==25.1.2
-    # via
-    #   ipykernel
-    #   jupyter-client
-    #   jupyter-server
-questionary==2.0.1
-    # via harlequin
+pyyaml-env-tag==0.1
+    # via mkdocs
 redis==5.0.3
     # via litestar
-referencing==0.34.0
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
-    #   jupyter-events
+regex==2023.12.25
+    # via mkdocs-material
 requests==2.31.0
-    # via jupyterlab-server
-rfc3339-validator==0.1.4
     # via
-    #   jsonschema
-    #   jupyter-events
-rfc3986-validator==0.1.1
-    # via
-    #   jsonschema
-    #   jupyter-events
+    #   linkchecker
+    #   mkdocs-material
 rich==13.7.1
     # via
     #   litestar
     #   rich-click
-    #   textual
 rich-click==1.7.4
-    # via
-    #   harlequin
-    #   litestar
-rpds-py==0.18.0
-    # via
-    #   jsonschema
-    #   referencing
+    # via litestar
 rsa==4.9
     # via python-jose
-ruff==0.3.3
-send2trash==1.8.2
-    # via jupyter-server
 setuptools==69.2.0
     # via
     #   nodeenv
     #   pytest-postgresql
-    #   tree-sitter
-shandy-sqlfmt==0.21.2
-    # via harlequin
 six==1.16.0
     # via
-    #   asttokens
-    #   bleach
     #   ecdsa
     #   jsbeautifier
     #   python-dateutil
-    #   rfc3339-validator
+smmap==5.0.1
+    # via gitdb
 sniffio==1.3.1
     # via
     #   anyio
     #   httpx
 soupsieve==2.5
     # via beautifulsoup4
-sourcery==1.15.0
 sqlalchemy==2.0.28
     # via
     #   advanced-alchemy
     #   alembic
-stack-data==0.6.3
-    # via ipython
 structlog==24.1.0
     # via litestar
 termcolor==2.4.0
     # via pytest-sugar
-terminado==0.18.1
-    # via
-    #   jupyter-server
-    #   jupyter-server-terminals
-textual==0.49.0
-    # via
-    #   harlequin
-    #   textual-fastdatatable
-    #   textual-textarea
-textual-fastdatatable==0.7.1
-    # via harlequin
-textual-textarea==0.11.3
-    # via harlequin
-tinycss2==1.2.1
-    # via nbconvert
-tomlkit==0.12.4
-    # via
-    #   harlequin
-    #   pylint
-tornado==6.4
-    # via
-    #   ipykernel
-    #   jupyter-client
-    #   jupyter-server
-    #   jupyterlab
-    #   terminado
-tqdm==4.66.2
-    # via shandy-sqlfmt
-traitlets==5.14.2
-    # via
-    #   comm
-    #   ipykernel
-    #   ipython
-    #   jupyter-client
-    #   jupyter-core
-    #   jupyter-events
-    #   jupyter-server
-    #   jupyterlab
-    #   matplotlib-inline
-    #   nbclient
-    #   nbconvert
-    #   nbformat
-tree-sitter==0.20.4
-    # via
-    #   textual
-    #   tree-sitter-languages
-tree-sitter-languages==1.9.1
-    # via
-    #   textual
-    #   textual-textarea
 typer==0.9.0
     # via granian
-types-click==7.1.8
-types-decorator==5.1.8.20240310
-types-python-dateutil==2.9.0.20240316
-    # via arrow
-types-pyyaml==6.0.12.20240311
-types-six==1.16.21.20240311
 typing-extensions==4.10.0
     # via
     #   advanced-alchemy
     #   aiosqlite
     #   alembic
-    #   asyncpg-stubs
     #   litestar
-    #   mypy
     #   polyfactory
     #   psycopg
     #   rich-click
     #   sqlalchemy
-    #   textual
     #   typer
-uc-micro-py==1.0.3
-    # via linkify-it-py
-uri-template==1.3.0
-    # via jsonschema
 urllib3==2.2.1
     # via requests
 uuid-utils==0.6.1
@@ -556,23 +372,19 @@ uvloop==0.18.0
     #   uvicorn
 vcrpy==6.0.1
     # via pytest-vcr
-virtualenv==20.25.1
-    # via pre-commit
+verspec==0.1.0
+    # via mike
+watchdog==4.0.0
+    # via mkdocs
 watchfiles==0.21.0
     # via uvicorn
-wcwidth==0.2.13
-    # via prompt-toolkit
-webcolors==1.13
-    # via jsonschema
-webencodings==0.5.1
-    # via
-    #   bleach
-    #   tinycss2
-websocket-client==1.7.0
-    # via jupyter-server
+wcmatch==8.5.1
+    # via mkdocs-include-markdown-plugin
 websockets==12.0
     # via uvicorn
 wrapt==1.16.0
     # via vcrpy
 yarl==1.9.4
     # via vcrpy
+zipp==3.18.1
+    # via importlib-metadata
